fix: scrollbar-track

--- a/.vitepress/theme/styles/style.css
+++ b/.vitepress/theme/styles/style.css
@@ -15,7 +15,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
